<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/login"
        android:onClick="onClick"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/switch_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/switch_account"
        android:onClick="onClick"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/submit_role_info_btn"
        android:layout_width="match_parent"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/submit_role_info"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/pay_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/pay"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/exit_btn"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/exit"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

</LinearLayout>